<resources>
    <string name="app_name">NotesApp</string>
    <string name="logout_button">Logout</string>
    <string name="favoritos_button">Favoritos</string>
    <string name="titulo_text">Titulo</string>
    <string name="contenido_text">Contenido</string>
    <string name="crear_button">Crear</string>
    <string name="nickname_text">Nombre de usuario</string>
    <string name="fullname_text">Nombres completos</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="registrar_button">Registrar</string>
    <string name="star_button">★</string>
</resources>
