<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_margin="16dp"
    android:focusable="true"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="383dp"
            android:layout_height="wrap_content"
            android:text="@string/titulo_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/content_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_text"
            android:layout_marginBottom="8dp"
            android:textSize="24sp"
            android:text="@string/contenido_text"/>

        <Button
            android:id="@+id/favourite_button"
            android:layout_below="@id/content_text"
            android:layout_alignParentEnd="true"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textSize="24sp"
            android:textAlignment="center"
            android:background="#fff"
            android:text="@string/star_button"
            />

    </RelativeLayout>



</android.support.v7.widget.CardView>
